--- a/templates/actor/character-main.hbs
+++ b/templates/actor/character-main.hbs
@@ -7,7 +7,7 @@
         </div>
         <div class="form-group stacked">
             <label for="system.description">Descrizione</label>
-            <prose-mirror name="system.description" id="system.description" value="{{system.description}}">
+            <prose-mirror name="system.description" id="system.description" value="{{system.description}}" toggled>
                 {{{enrichedHTML.description}}}
             </prose-mirror>
         </div>
