--- a/templates/item/item-main.hbs
+++ b/templates/item/item-main.hbs
@@ -1,7 +1,7 @@
 <section class="tab {{tabs.item.id}} {{tabs.item.cssClass}} scrollable" id="item" data-tab="{{tabs.item.id}}" data-group="{{tabs.item.group}}">
     <fieldset>
         <legend>Descrizione</legend>
-        <prose-mirror name="system.description" id="system.description" value="{{system.description}}">
+        <prose-mirror name="system.description" id="system.description" value="{{system.description}}" toggled>
             {{{enrichedHTML.description}}}
         </prose-mirror>
     </fieldset>
