Class-Characyer interactions, Skill initi, onDrop handlers

--- a/templates/actor/character-items.hbs
+++ b/templates/actor/character-items.hbs
@@ -4,22 +4,22 @@
         <div class="form-group">
             <div class="form-fields">
                 <label for="system.martial.melee">Armi da mischia ( <span class="fu-melee"></span> )</label>
-                <input type="checkbox" name="system.martial.melee" id="system.martial.melee" {{#if system.martial.melee}}checked{{/if}} />
+                <input type="checkbox" name="system.martial.melee" id="system.martial.melee" {{#if system.martial.melee}}checked{{/if}} disabled />
             </div>
 
             <div class="form-fields">
                 <label for="system.martial.ranged">Armi a distanza ( <span class="fu-ranged"></span> )</label>
-                <input type="checkbox" name="system.martial.ranged" id="system.martial.ranged" {{#if system.martial.ranged}}checked{{/if}} />
+                <input type="checkbox" name="system.martial.ranged" id="system.martial.ranged" {{#if system.martial.ranged}}checked{{/if}} disabled />
             </div>
             
             <div class="form-fields">
                 <label for="system.martial.armor">Armature</label>
-                <input type="checkbox" name="system.martial.armor" id="system.martial.armor" {{#if system.martial.armor}}checked{{/if}} />
+                <input type="checkbox" name="system.martial.armor" id="system.martial.armor" {{#if system.martial.armor}}checked{{/if}} disabled />
             </div>
             
             <div class="form-fields">
                 <label for="system.martial.shield">Scudi</label>
-                <input type="checkbox" name="system.martial.shield" id="system.martial.shield" {{#if system.martial.shield}}checked{{/if}} />
+                <input type="checkbox" name="system.martial.shield" id="system.martial.shield" {{#if system.martial.shield}}checked{{/if}} disabled />
             </div>
         </div>
     </fieldset>
