--- a/templates/app/charactermancer-main.hbs
+++ b/templates/app/charactermancer-main.hbs
@@ -1,42 +1,78 @@
 <section class="tab active scrollable">
 
-	{{#if (eq wizard.currentStep 1)}}
-		<p>Benvenuto nel Charactermancer di Ultima Legends! Segui i passaggi per creare il tuo personaggio.</p>
-		<fieldset>
-			<legend>Informazioni personali</legend>
-			{{> systems/ultima-legends/templates/app/parts/charactermancer-identity.hbs }}
-		</fieldset>
-	{{/if}}
+	{{#if (gt actor.system.level.current 0)}}
 
-	{{#if (eq wizard.currentStep 2)}}
-		<p>Scegli due o tre Classi e distribuisci tra loro i cinque livelli iniziali.</p>
-		<fieldset>
-			<legend>Classi</legend>
-			{{> systems/ultima-legends/templates/app/parts/charactermancer-classes.hbs }}
-		</fieldset>
-	{{/if}}
+		{{!-- Step 1: Identity & Theme --}}
+		{{#if (eq wizard.currentStep 1)}}
+			<p>Puoi cambiare la tua <strong>Identità</strong> e/o il tuo <strong>Tema</strong>.</p>
+			<fieldset>
+				<legend>Informazioni personali</legend>
+				{{> systems/ultima-legends/templates/app/parts/charactermancer-identity.hbs }}
+			</fieldset>
+		{{/if}}
 
-	{{#if (eq wizard.currentStep 3)}}
-		<p>Scegli le abilità per il tuo personaggio.</p>
-		{{> systems/ultima-legends/templates/app/parts/charactermancer-skills.hbs }}
-	{{/if}}
+		{{!-- Step 2: Classes --}}
+		{{#if (eq wizard.currentStep 2)}}
+			<p>Incrementa di 1 il livello di una classe oppure seleziona una nuova classe.</p>
+			<fieldset>
+				<legend>Classi</legend>
+			</fieldset>
+				{{> systems/ultima-legends/templates/app/parts/charactermancer-actor-classes.hbs }}
+		{{/if}}
 
-	{{#if (eq wizard.currentStep 4)}}
-		<p>Determina la taglia di dado base delle quattro <strong>Caratteristiche</strong> del personaggio.</p>
-		<fieldset>
-			<legend>Caratteristiche</legend>
-			{{> systems/ultima-legends/templates/app/parts/charactermancer-attributes.hbs }}
-		</fieldset>
-	{{/if}}
+		{{!-- Step 3: Skills --}}
+		{{#if (eq wizard.currentStep 3)}}
+			<p>Scegli l'abilità da incrementare di 1 livello oppure seleziona una nuova abilità.</p>
+			{{> systems/ultima-legends/templates/app/parts/charactermancer-actor-skills.hbs }}
+		{{/if}}
 
-	{{#if (eq wizard.currentStep 5)}}
-		<p>Usa un budget di <strong>500 zenit</strong> per acquistare l'<strong>equipaggiamento</strong>.</p>
-		{{> systems/ultima-legends/templates/app/parts/charactermancer-shop.hbs }}
-	{{/if}}
+	{{else}}
 
-	{{#if (eq wizard.currentStep wizard.total)}}
-		<h3>Riepilogo</h3>
-		{{> systems/ultima-legends/templates/app/parts/charactermancer-summary.hbs }}
+		{{!-- Step 1: Identity --}}
+		{{#if (eq wizard.currentStep 1)}}
+			<p>Benvenuto nel Charactermancer di Ultima Legends! Segui i passaggi per creare il tuo personaggio.</p>
+			<fieldset>
+				<legend>Informazioni personali</legend>
+				{{> systems/ultima-legends/templates/app/parts/charactermancer-identity.hbs }}
+			</fieldset>
+		{{/if}}
+
+		{{!-- Step 2: Classes --}}
+		{{#if (eq wizard.currentStep 2)}}
+			<p>Scegli due o tre Classi e distribuisci tra loro i cinque livelli iniziali.</p>
+			<fieldset>
+				<legend>Classi</legend>
+				{{> systems/ultima-legends/templates/app/parts/charactermancer-classes.hbs }}
+			</fieldset>
+		{{/if}}
+
+		{{!-- Step 3: Skills --}}
+		{{#if (eq wizard.currentStep 3)}}
+			<p>Scegli le abilità per il tuo personaggio.</p>
+			{{> systems/ultima-legends/templates/app/parts/charactermancer-skills.hbs }}
+		{{/if}}
+
+		{{!-- Step 4: Attributes --}}
+		{{#if (eq wizard.currentStep 4)}}
+			<p>Determina la taglia di dado base delle quattro <strong>Caratteristiche</strong> del personaggio.</p>
+			<fieldset>
+				<legend>Caratteristiche</legend>
+				{{> systems/ultima-legends/templates/app/parts/charactermancer-attributes.hbs }}
+			</fieldset>
+		{{/if}}
+
+		{{!-- Step 5: Equipment --}}
+		{{#if (eq wizard.currentStep 5)}}
+			<p>Usa un budget di <strong>500 zenit</strong> per acquistare l'<strong>equipaggiamento</strong>.</p>
+			{{> systems/ultima-legends/templates/app/parts/charactermancer-shop.hbs }}
+		{{/if}}
+
+		{{!-- Step 6: Summary --}}
+		{{#if (eq wizard.currentStep wizard.total)}}
+			<h3>Riepilogo</h3>
+			{{> systems/ultima-legends/templates/app/parts/charactermancer-summary.hbs }}
+		{{/if}}
+
 	{{/if}}
 
 </section>
